// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Pager background=false 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Pager background=true 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Pager className="my-classname" 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text my-classname uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Pager colorSchema="brown" 1`] = `
<Row
  className="color-schema-brown uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Pager colorSchema="brown-rich" 1`] = `
<Row
  className="color-schema-brown-rich uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Pager colorSchema="cyan" 1`] = `
<Row
  className="color-schema-cyan uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Pager colorSchema="cyan-rich" 1`] = `
<Row
  className="color-schema-cyan-rich uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Pager colorSchema="default" 1`] = `
<Row
  className="color-schema-default uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Pager colorSchema="green" 1`] = `
<Row
  className="color-schema-green uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Pager colorSchema="green-rich" 1`] = `
<Row
  className="color-schema-green-rich uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Pager colorSchema="grey" 1`] = `
<Row
  className="color-schema-grey uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Pager colorSchema="grey-rich" 1`] = `
<Row
  className="color-schema-grey-rich uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Pager colorSchema="orange" 1`] = `
<Row
  className="color-schema-orange uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Pager colorSchema="orange-rich" 1`] = `
<Row
  className="color-schema-orange-rich uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Pager colorSchema="pink" 1`] = `
<Row
  className="color-schema-pink uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Pager colorSchema="pink-rich" 1`] = `
<Row
  className="color-schema-pink-rich uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Pager colorSchema="purple" 1`] = `
<Row
  className="color-schema-purple uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Pager colorSchema="purple-rich" 1`] = `
<Row
  className="color-schema-purple-rich uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Pager colorSchema="red" 1`] = `
<Row
  className="color-schema-red uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Pager colorSchema="red-rich" 1`] = `
<Row
  className="color-schema-red-rich uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Pager colorSchema="yellow" 1`] = `
<Row
  className="color-schema-yellow uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Pager colorSchema="yellow-rich" 1`] = `
<Row
  className="color-schema-yellow-rich uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Pager controlled=false 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Pager controlled=true 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Pager default props 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Pager disabled=false 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Pager disabled=true 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  disabled={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Pager docKit examples UU5.Bricks.Pager should render without crash 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s4 m4"
    header="Links"
    id="uuID2"
    key="uuID2"
    level="3"
  >
    <Pager
      id="uuID3"
      leftLink={
        Object {
          "href": "#",
          "icon": "mdi-arrow-left",
          "text": "previous",
        }
      }
    />
    <Pager
      id="uuID4"
      rightLink={
        Object {
          "href": "#",
          "icon": "mdi-arrow-right",
          "text": "next",
        }
      }
    />
    <Pager
      id="uuID5"
      upLink={
        Object {
          "href": "#",
          "icon": "mdi-arrow-up",
          "text": "up",
        }
      }
    />
    <Pager
      downLink={
        Object {
          "href": "#",
          "icon": "mdi-arrow-down",
          "text": "down",
        }
      }
      id="uuID6"
    />
  </Column>
</div>
`;

exports[`UU5.Bricks.Pager downLink={"href":"#downlink","text":"Dolů","icon":"uu5-plus"} 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <Button
    bgStyle="transparent"
    className=" uu5-bricks-pager-link"
    content={
      Array [
        <Span
          className="uu5-bricks-pager-text"
          content="Dolů"
          controlled={true}
          disabled={false}
          dynamic={false}
          hidden={false}
          id={null}
          ignoreInnerHTML={false}
          mainAttrs={null}
          name={null}
          noIndex={false}
          parent={null}
          pureRender={false}
          ref_={null}
          selected={false}
          style={null}
          tooltip={null}
        />,
        <Icon
          authenticate={false}
          className="uu5-bricks-pager-icon"
          clickable={true}
          controlled={true}
          disabled={false}
          hidden={false}
          icon="uu5-plus"
          id={null}
          mainAttrs={null}
          name={null}
          nestingLevel={null}
          noIndex={false}
          parent={null}
          pureRender={false}
          ref_={null}
          selected={false}
          src=""
          style={null}
          tooltip={null}
        />,
      ]
    }
    href="#downlink"
    icon="uu5-plus"
    text="Dolů"
  />
</Row>
`;

exports[`UU5.Bricks.Pager hidden=false 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Pager hidden=true 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Pager id="myId" 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="myId-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Pager leftLink={"href":"#leftlink","text":"Předchozí článek","icon":"uu5-plus"} 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <Button
    bgStyle="transparent"
    className=" uu5-bricks-pager-link"
    content={
      Array [
        <Icon
          authenticate={false}
          className="uu5-bricks-pager-icon"
          clickable={true}
          controlled={true}
          disabled={false}
          hidden={false}
          icon="uu5-plus"
          id={null}
          mainAttrs={null}
          name={null}
          nestingLevel={null}
          noIndex={false}
          parent={null}
          pureRender={false}
          ref_={null}
          selected={false}
          src=""
          style={null}
          tooltip={null}
        />,
        <Span
          className="uu5-bricks-pager-text"
          content="Předchozí článek"
          controlled={true}
          disabled={false}
          dynamic={false}
          hidden={false}
          id={null}
          ignoreInnerHTML={false}
          mainAttrs={null}
          name={null}
          noIndex={false}
          parent={null}
          pureRender={false}
          ref_={null}
          selected={false}
          style={null}
          tooltip={null}
        />,
      ]
    }
    href="#leftlink"
    icon="uu5-plus"
    text="Předchozí článek"
  />
</Row>
`;

exports[`UU5.Bricks.Pager mainAttrs=undefined 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Pager name="myName" 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  name="myName-inner"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Pager nestingLevel="bigBox" 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBox"
/>
`;

exports[`UU5.Bricks.Pager nestingLevel="bigBoxCollection" 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Pager nestingLevel="box" 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="box"
/>
`;

exports[`UU5.Bricks.Pager nestingLevel="boxCollection" 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="boxCollection"
/>
`;

exports[`UU5.Bricks.Pager nestingLevel="container" 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Pager nestingLevel="inline" 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Pager nestingLevel="page" 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Pager nestingLevel="smallBox" 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
/>
`;

exports[`UU5.Bricks.Pager nestingLevel="smallBoxCollection" 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBoxCollection"
/>
`;

exports[`UU5.Bricks.Pager nestingLevel="spa" 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Pager noIndex=false 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Pager noIndex=true 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-noindex uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Pager pureRender=false 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Pager pureRender=true 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  pureRender={true}
/>
`;

exports[`UU5.Bricks.Pager rightLink={"href":"#rightlink","text":"Další článek","icon":"uu5-plus"} 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <Button
    bgStyle="transparent"
    className=" uu5-bricks-pager-link"
    content={
      Array [
        <Span
          className="uu5-bricks-pager-text"
          content="Další článek"
          controlled={true}
          disabled={false}
          dynamic={false}
          hidden={false}
          id={null}
          ignoreInnerHTML={false}
          mainAttrs={null}
          name={null}
          noIndex={false}
          parent={null}
          pureRender={false}
          ref_={null}
          selected={false}
          style={null}
          tooltip={null}
        />,
        <Icon
          authenticate={false}
          className="uu5-bricks-pager-icon"
          clickable={true}
          controlled={true}
          disabled={false}
          hidden={false}
          icon="uu5-plus"
          id={null}
          mainAttrs={null}
          name={null}
          nestingLevel={null}
          noIndex={false}
          parent={null}
          pureRender={false}
          ref_={null}
          selected={false}
          src=""
          style={null}
          tooltip={null}
        />,
      ]
    }
    href="#rightlink"
    icon="uu5-plus"
    text="Další článek"
  />
</Row>
`;

exports[`UU5.Bricks.Pager selected=false 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Pager selected=true 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  selected={true}
/>
`;

exports[`UU5.Bricks.Pager size="l" 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-l"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Pager size="m" 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Pager size="s" 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-s"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Pager size="xl" 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-xl"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Pager style="padding:8px; borderRadius: 2px" 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
/>
`;

exports[`UU5.Bricks.Pager style={"backgroundColor":"red","color":"blue"} 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
/>
`;

exports[`UU5.Bricks.Pager tooltip="My Tooltip" 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={
    Object {
      "title": "My Tooltip",
    }
  }
  nestingLevel="bigBoxCollection"
  tooltip="My Tooltip"
/>
`;

exports[`UU5.Bricks.Pager upLink={"href":"#uplink","text":"Nahoru","icon":"uu5-plus"} 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <Button
    bgStyle="transparent"
    className=" uu5-bricks-pager-link"
    content={
      Array [
        <Icon
          authenticate={false}
          className="uu5-bricks-pager-icon"
          clickable={true}
          controlled={true}
          disabled={false}
          hidden={false}
          icon="uu5-plus"
          id={null}
          mainAttrs={null}
          name={null}
          nestingLevel={null}
          noIndex={false}
          parent={null}
          pureRender={false}
          ref_={null}
          selected={false}
          src=""
          style={null}
          tooltip={null}
        />,
        <Span
          className="uu5-bricks-pager-text"
          content="Nahoru"
          controlled={true}
          disabled={false}
          dynamic={false}
          hidden={false}
          id={null}
          ignoreInnerHTML={false}
          mainAttrs={null}
          name={null}
          noIndex={false}
          parent={null}
          pureRender={false}
          ref_={null}
          selected={false}
          style={null}
          tooltip={null}
        />,
      ]
    }
    href="#uplink"
    icon="uu5-plus"
    text="Nahoru"
  />
</Row>
`;
